--- a/companies/prime.html
+++ b/companies/prime.html
@@ -99,14 +99,18 @@
                                    about this technology as it has not been tested as extensively as it should be. The Reverse Transcriptase
                                    makes about 1 mistake every 100,000 bases. That might not sound like a lot, but when editing millions of 
                                    cells in a human, that is hundreds of mistakes that get introduced into a gene. There is no way to predict
-                                   what kind of side effects could come from these many mutations.
+                                   what kind of side effects could come from these many mutations. Their new PASSIGE system could fix the problems 
+                                   with the first generation Prime Editing. It edits a place in the DNA to create a landing site for an integrase 
+                                   enzyme. This facilitates the insertion of the gene with minimal Reverse Transcriptase requirements. I think 
+                                   they know that Prime Editing has big issues with Reverse Transcriptase, and they are rushing to develop a new
+                                   system to fix it.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have only followed this company since the IPO. It hasn’t been very long. I have followed the CEO Keith 
+                                   I have only followed this company since the IPO. It hasn't been very long. I have followed the CEO Keith 
                                    Gottesdiener when I was an investor in Rhythm Pharma. I think he did a good job over there so he does 
                                    get a level of trust that was earned developing another biotech company. Now we will have to wait and 
                                    see if he can repeat that success with this company.
@@ -145,7 +149,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $316 million
+                                   Cash $294 million
                               </p>
                               <p class="profiles">
                                    Friedreich's Ataxia is estimated to be about 7,000 patients in the US. Even if they 1,000 of them at a $3 million
@@ -162,7 +166,7 @@
                                    I won't give any value to these programs yet.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $916 million market cap. Based on the 97 million shares outstanding, that comes to $9.44.
+                                   All in, that is a $894 million market cap. Based on the 97 million shares outstanding, that comes to $9.44.
                               </p>
                          </section>  
 
