--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                          <div>
                               <h3>Recent News</h3>
                               <p>
+                                   <strong>3/6/2023: </strong> I put the last of my cash for March to work today across all my companies in my 
+                                   <a href="investing/portfolio.html#robinhood">Robinhood Portfolio</a>
+                              </p>
+                              <p>
                                    <strong>3/6/2023: </strong> I bought my <a href="investing/portfolio.html"> starter positions</a> is all my 20 stocks I selected for my 
                                    Robinhood portfolio. I picked them up today near the low. 
                               </p>
