--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/14/2023</p>
+                    <p class="updated">Last Updated 3/10/2023</p>
 
                     <h1 class="company-name"><a href="https://www.cariboubio.com/">Caribou Biosciences</a></h1>
 
@@ -94,17 +94,22 @@
                                    Caribou is a gene editing and cell therapy company. They use the CAS12 enzyme with their proprietary 
                                    chRDNA guide technology. They chose to deploy their technology in developing cell therapies. They are working 
                                    on T cells ex-vivo and induced Pluripotent Stem Cells for NK cell therapies. I think they are using the CAR-T 
-                                   therapies to test out key edits like PD-1 knockout and MHC I knockout and HLA-E insertion. These key edits can 
+                                   therapies to test out key edits like PD-1 knockout, MHC I knockout and HLA-E insertion. These key edits can 
                                    drive advancements in cell therapies. Eventually, they will combine all the successful edits into all their therapies.
+                                   That will probably requore them to move more intp iPSC cells as the efficiency would drop significantly by doing that 
+                                   many edits to each cell. Their data showed just 2 targeted insertions dropped the efficiency to about 63% of cells
+                                   getting all the edits. That is very low if they want to do cell engineering down the road.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have been following Rachel Haurwitz since it has gone public. I think she has done a good job with managing the 
+                                   I have been following Rachel Haurwitz since Caribou has gone public. I think she has done a good job with managing the 
                                    company so far. They have some good data in allogeneic CAR-T which shows they are doing good on the 
-                                   science front. It will take time to know if they manage the balance sheet and clinical trials well.
+                                   science front. I am not sure I am on board with all her decisions though. There is so much more they could 
+                                   be doing with gene editing. They could have an entire pipeline of gene editing programs. Yet they focus on 
+                                   cell therapies which are only a tiny fraction of the size of what gene editing could make. 
                               </p>
                          </section> 
                          
@@ -115,20 +120,23 @@
                                    to knock out the PD-1 receptor. This protects these cells from the tumor microenvironment by preventing T cell 
                                    exhaustion. The early data was very impressive for an allogeneic program with 100% complete response rates. The 
                                    only issue was the durability still fell off at 6 months like other allogeneic programs. The effects of PD-1 knockout 
-                                   improved efficacy, but not durability which is the key issue in allogeneic programs.
+                                   improved efficacy, but not durability which is the key issue in allogeneic programs. We should see an update on 
+                                   this program later this year.
                               </p>
                               <p class="profiles">
                                    CB-011 is their BCMA CAR-T therapy where they knockout the MHC I and replace it with HLA-E. This is designed to 
-                                   prevent cell from being rejected by the host immune system. We know that HLA-E helps prevent NK cell reject, but not 
+                                   prevent cells from being rejected by the host immune system. We know that HLA-E helps prevent NK cell rejection, but not 
                                    completely. We will have to see how much benefit this edit really gives to durability. They are calling their 
-                                   version of immune evasion Camouflage. 
+                                   version of immune evasion Camouflage. They are enrolling the first dose now in the phase 1 trial. We might see some 
+                                   data later in the year.
                               </p>
                               <p class="profiles">
                                    CB-012 is their CLL1 CAR-T therapy where they knockout the MHC I and replace it with HLA-E, and they 
-                                   knock out PD-1. This program has both edits of the prior therapies. This is designed to 
-                                   prevent cell from being rejected by the host immune system and avoid T cell exhaustion. We know that
-                                   HLA-E helps prevent NK cell reject. We will have to see how much benefit these edits have combined. This will 
-                                   be targeting AML.
+                                   knock out PD-1. This is the program I expected as it includes both the edits of the first 2 programs. It will 
+                                   probably set the stage for all their future cell therapies with these key edits. These edits are designed to 
+                                   prevent cells from being rejected by the host immune system and avoid T cell exhaustion. We know that
+                                   HLA-E helps prevent NK cell rejection. We will have to see how much benefit these edits have combined. This will 
+                                   be targeting AML. It is currently in IND enabling studies.
                               </p>
                               <p class="profiles">
                                    CB-020 is their preclinical induced Pluripotent Stem Cell platform for NK cells. It 
@@ -142,7 +150,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $343 million
+                                   Cash $317 million
                               </p>
                               <p class="profiles">
                                    CB-010 is a CD19 program for lymphomas. That is about 75,000 patients in the US. So far this is 
@@ -161,27 +169,29 @@
                                    a .1 multiple for no data yet. That is worth $25 million.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $668 million market cap. Based on the 61 million shares outstanding, that comes to $10.95.
+                                   All in, that is a $642 million market cap. Based on the 61.3 million shares outstanding, that comes to $10.47.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Abbvie Collaboration for up to 4 CAR-T programs. They are entitled to $150 million in development milestones 
+                                   and $200 million of commercial milestones on each of these programs. They will get royalties in the high single 
+                                   digit to low double digit range.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   CB-010 Phase 1 Ongoing
+                                   CB-010 Phase 1 Update in 2H of 2023
                               </p>
                               <p class="profiles">
-                                   CB-011 Phase 1 Enrolling
+                                   CB-011 Phase 1 Recruiting Dose 1
                               </p>
                               <p class="profiles">
-                                   CB-012 Preclinical
+                                   CB-012 IND planned for 2H of 2023
                               </p>
                               <p class="profiles">
                                    CB-020 Precilincal
