--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                          <div>
                               <h3>Website Updates</h3>
                               <p> 
+                                   <strong>3/10/2023: </strong> I updated <a href="companies/caribou.html">Caribou</a> profile after reading the 10k.
+                              </p>
+                              <p> 
                                    <strong>3/8/2023: </strong> I built out more of the Fintech page with adding <a href="investing/fintech.html#blockchain">Blockchain</a> 
                                    section to the fintech page.
                               </p>
