--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -96,7 +96,7 @@
                                    on T cells ex-vivo and induced Pluripotent Stem Cells for NK cell therapies. I think they are using the CAR-T 
                                    therapies to test out key edits like PD-1 knockout, MHC I knockout and HLA-E insertion. These key edits can 
                                    drive advancements in cell therapies. Eventually, they will combine all the successful edits into all their therapies.
-                                   That will probably requore them to move more intp iPSC cells as the efficiency would drop significantly by doing that 
+                                   That will probably require them to move more into iPSC cells as the efficiency would drop significantly by doing that 
                                    many edits to each cell. Their data showed just 2 targeted insertions dropped the efficiency to about 63% of cells
                                    getting all the edits. That is very low if they want to do cell engineering down the road.
                               </p>
@@ -194,7 +194,7 @@
                                    CB-012 IND planned for 2H of 2023
                               </p>
                               <p class="profiles">
-                                   CB-020 Precilincal
+                                   CB-020 Preclinical
                               </p>
                          </section> 
 
