--- a/companies/companies.html
+++ b/companies/companies.html
@@ -125,20 +125,11 @@
                     </div>
 
                     <div class="company-list">
-                         <h2>SynBio</h2>
+                         <h2>Cell Engineering</h2>
                          <ul>
                               <li>
                                    <a href="ginkgo.html">Gingko Bioworks (DNA)</a>
                               </li>
-                              <li>
-                                   <a href="twist.html">Twist Bioscience (TWST)</a>
-                              </li>
-                         </ul>
-                    </div>
-
-                    <div class="company-list">
-                         <h2>iPSC</h2>
-                         <ul>
                               <li>
                                    <a href="ipsc.html">Century Therapeutics (IPSC)</a>
                               </li>
@@ -155,40 +146,19 @@
                     </div>
 
                     <div class="company-list">
-                         <h2>Sequencing</h2>
+                         <h2>Personalized Medicine</h2>
                          <ul>
                               <li>
                                    <a href="invitae.html">Invitae (NVTA)</a>
                               </li>
                               <li>
-                                   <a href="pacbio.html">PacBio (PACB)</a>
-                              </li>
-                              <li>
-                                   <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
-                              </li>
-                         </ul>
-                    </div>
-
-                    <div class="company-list">
-                         <h2>Kinase Inhibitors</h2>
-                         <ul>
-                              <li>
                                    <a href="blueprint.html">Blueprint Medicines (BPMC)</a>
                               </li>
                               <li>
-                                   <a href="mirati.html">Mirati Therapeutics (MRTX)</a>
+                                   <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
                               </li>
                               <li>
                                    <a href="revolution.html">Revolution Medicines (RVMD)</a>
-                              </li>
-                         </ul>
-                    </div>
-
-                    <div class="company-list">
-                         <h2>Protein Degraders</h2>
-                         <ul>
-                              <li>
-                                   <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
                               </li>
                               <li>
                                    <a href="monterosa.html">MonteRosa Therapeutics (GLUE)</a>
