--- a/companies/prime.html
+++ b/companies/prime.html
@@ -81,7 +81,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/13/2023</p>
+                    <p class="updated">Last Updated 3/10/2023</p>
 
                     <h1 class="company-name"><a href="https://primemedicine.com/">Prime Medicine</a></h1>
 
@@ -166,14 +166,16 @@
                                    I won't give any value to these programs yet.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $894 million market cap. Based on the 97 million shares outstanding, that comes to $9.44.
+                                   All in, that is a $894 million market cap. Based on the 97.2 million shares outstanding, that comes to $9.19.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Beam License where they license technology to Prime Editing to Beam. They do have opt in rights for some of the programs 
+                                   in the US. Any programs they opt into would be shared 50/50 in the US. They are able to get $125 million in milestones 
+                                   and high single digit to low double digit royalties on all programs.
                               </p>
                          </section>
 
