--- a/index.html
+++ b/index.html
@@ -101,8 +101,13 @@
 
                <div class="container">
                     <h3 class="sub-header">Events</h3>
-                    3/09/23 I put the last of my cash to work in my Robinhood portfolio buying a little of every stock in 
-                    that portfolio which now 20 companies.
+                    <p>
+                         3/09/23 I put the last of my cash to work in my Robinhood portfolio buying a little of every stock in 
+                         that portfolio which now 20 companies.
+                    </p>
+                    <p>
+                         3/10/23 Updated Caribou and Prime Profiles after doing the 10K.
+                    </p>
                </div>
           
           </main>
