--- a/companies/prime.html
+++ b/companies/prime.html
@@ -98,7 +98,7 @@
                                    the RNA template into the DNA. Then the DNA repair mechanisms will fix the DNA. I have big concerns
                                    about this technology as it has not been tested as extensively as it should be. The Reverse Transcriptase
                                    makes about 1 mistake every 100,000 bases. That might not sound like a lot, but when editing millions of 
-                                   cells in a human, that is hundreds of mistakes that get introduced into a gene. There is no way to predict
+                                   cells in a human, that is dozens of mistakes that get introduced into a gene. There is no way to predict
                                    what kind of side effects could come from these many mutations. Their new PASSIGE system could fix the problems 
                                    with the first generation Prime Editing. It edits a place in the DNA to create a landing site for an integrase 
                                    enzyme. This facilitates the insertion of the gene with minimal Reverse Transcriptase requirements. I think 
@@ -222,7 +222,7 @@
                          <a href="companies.html">Companies Page</a> 
                     </div>
                     <div class="back-companies">
-                         <a href="verve.html">&lt;Previous</a> <a href="invitae.html">Next&gt;</a>
+                         <a href="verve.html">&lt;Previous</a> <a href="ginkgo.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
