--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -191,7 +191,7 @@
                          <a href="companies.html">Companies Page</a>
                     </div>
                     <div class="back-companies">
-                         <a href="oxford.html">&lt;Previous</a> <a href="twist.html">Next&gt;</a>
+                         <a href="oxford.html">&lt;Previous</a> <a href="ipsc.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
