--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
+          <meta name="description" content="Learn about Biotech">
           <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies, Financial Literacy">
           <meta name="author" content="CoderKid2k">
           <meta name="twitter:card" content="summary">
           <meta name="twitter:site:id" content="@biotech2k1">
           <meta name="twitter:creator" content="@biotech2k1">
           <meta name="twitter:title" content="Biotech2k.com">
-          <meta name="twitter:description" content="Learn about Investing and Science of biotech">
+          <meta name="twitter:description" content="Learn about Biotech">
           <meta name="twitter:image" content="https://www.biotech2k.com/images/thumbnail.jpg">
 
           <!-- Favicon -->
@@ -102,11 +102,11 @@
                <div class="container">
                     <h3 class="sub-header">Events</h3>
                     <p>
-                         3/09/23 I put the last of my cash to work in my Robinhood portfolio buying a little of every stock in 
-                         that portfolio which now 20 companies.
+                         3/10/23 Updated Caribou and Prime Profiles after doing the 10K.
                     </p>
                     <p>
-                         3/10/23 Updated Caribou and Prime Profiles after doing the 10K.
+                         3/09/23 I put the last of my cash to work in my Robinhood portfolio buying a little of every stock in 
+                         that portfolio which now 20 companies.
                     </p>
                </div>
           
