--- a/companies/ipsc.html
+++ b/companies/ipsc.html
@@ -206,7 +206,7 @@
                          <a href="companies.html">Companies Page</a>
                     </div>
                     <div class="back-companies">
-                         <a href="twist.html">&lt;Previous</a> <a href="sana.html">Next&gt;</a>
+                         <a href="ginkgo.html">&lt;Previous</a> <a href="sana.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
