--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -285,7 +285,7 @@
                          <a href="companies.html">Companies Page</a>
                     </div>
                     <div class="back-companies">
-                         <a href="caribou.html">&lt;Previous</a> <a href="mirati.html">Next&gt;</a>
+                         <a href="invitae.html">&lt;Previous</a> <a href="kymera.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
