--- a/companies/invitae.html
+++ b/companies/invitae.html
@@ -176,7 +176,7 @@
                          <a href="companies.html">Companies Page</a>
                     </div>
                     <div class="back-companies">
-                         <a href="prime.html">&lt;Previous</a> <a href="pacbio.html">Next&gt;</a>
+                         <a href="caribou.html">&lt;Previous</a> <a href="blueprint.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
