--- a/companies/caribou.html
+++ b/companies/caribou.html
@@ -228,7 +228,7 @@
                          <a href="companies.html">Companies Page</a>
                     </div>
                     <div class="back-companies">
-                         <a href="fate.html">&lt;Previous</a> <a href="blueprint.html">Next&gt;</a>
+                         <a href="fate.html">&lt;Previous</a> <a href="invitae.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
