--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -236,7 +236,7 @@
                          <a href="companies.html">Companies Page</a>
                     </div>
                     <div class="back-companies">
-                         <a href="mirati.html">&lt;Previous</a> <a href="revolution.html">Next&gt;</a>
+                         <a href="blueprint.html">&lt;Previous</a> <a href="revolution.html">Next&gt;</a>
                     </div>
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
