--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -157,7 +157,7 @@
                                    from their preventive programs. Right now, they are doing $100 million in biosecurity sales. That gives it 
                                    a value of about $1 billion in value based on a realistic price to sales. 
                               </p>
-                              <p>
+                              <p class="profiles">
                                    The pipeline of the foundry has well over $2 billion in downstream value in the programs from 2022 alone. I 
                                    would venture that this pipeline is much bigger than that. I would give this a standard $500 million valuation for 
                                    a typical early stage clinical pipeline.
