--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
                <nav>
                          <ul class="menu">
                               <li class="nav-item">
-                                   <a href="index.html">Home</a>
-                              </li>
-                              <li class="nav-item">
                                    <a href="innovation/innovation.html">Innovation</a>
                               </li>
                               <li class="nav-item">
@@ -59,6 +56,9 @@
                               </li>
                               <li class="nav-item">
                                    <a href="investing/investing.html">Investing</a>
+                              </li>
+                              <li class="nav-item">
+                                   <a href="technology/tech.html">Technology</a>
                               </li>
                               <li class="nav-item">
                                    <a href="learning/science.html">Science</a>
